tests/circuits/invalids/invalid_chipsets_section_content_2.nts
.chipsets:
input   a
input   b s
4071    or
output  s
.links:
a:1     or:1
b:1     or:2
or:3    s:1